fix: double scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
     flex: 1;
     min-height: 0;
 
-    overflow-y: auto;
+    overflow-y: visible;
     &:focus {
         outline: none;
     }
